# Owncraft

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
assets/: old.txt  world.txt
assets/blocks/: grass.mtl
cmakemodules/: definitions.cmake  include.cmake  includes.cmake  libraries.cmake  postbuild.cmake  sources.cmake
include/: MainView.h  Player.h  SkyBox.h  World.h  system.h
lib/boost/: libboost_filesystem-vc141-mt-x64-1_66.lib  libboost_system-vc141-mt-gd-x64-1_66.lib  libboost_system-vc141-mt-x64-1_66.lib
lib/osg/: OpenThreads.exp  OpenThreads.lib  OpenThreadsd.exp  OpenThreadsd.lib  osg.exp  osg.lib  osgAnimation.exp  osgAnimation.lib  osgAnimationd.exp  osgAnimationd.lib  osgDB.exp  osgDB.lib  osgDBd.exp  osgDBd.lib  osgFX.exp  osgFX.lib  osgFXd.exp  osgFXd.lib  osgGA.exp  osgGA.lib  osgGAd.exp  osgGAd.lib  osgManipulator.exp  osgManipulator.lib  osgManipulatord.exp  osgManipulatord.lib  osgParticle.exp  osgParticle.lib  osgParticled.exp  osgParticled.lib  osgPresentation.exp  osgPresentation.lib  osgPresentationd.exp  osgPresentationd.lib  osgShadow.exp  osgShadow.lib  osgShadowd.exp  osgShadowd.lib  osgSim.exp  osgSim.lib  (+32 more)
src/: MainView.cpp  Player.cpp  SkyBox.cpp  World.cpp  main.cpp  system.cpp
tool/: CMakeLists.txt
tool/plato/: main.cpp
tool/pyramid/: main.cpp
